<resources>
    <string name="app_name">FloraApp</string>
    <string name="name_text">Name</string>
    <string name="price_text">price</string>
    <string name="change_image_text">Change Image</string>
    <string name="fruit_image_text">Fruit Image</string>
    <string name="description_text">Description</string>
    <string name="add_fruit_text">Add Fruit</string>
    <string name="add_indicator">Go To Add Activity</string>
    <string name="app_logo_text">App Logo</string>
    <string name="requesting_permissions_text">Requesting Permissions</string>
    <string name="access_files_explanation_text">This application is requesting access to your files and internal storage, so that we can be able to select an image from the gallery.</string>
    <string name="grant_access_text">Grant Access</string>
</resources>
