<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddFruitActivity">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/price_text"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/fruit_image_view"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/fruit_image_text"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/change_fruit_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/change_image_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_text"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/add_fruit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="?colorPrimary"
        android:text="@string/add_fruit_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />


</LinearLayout>