<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RequestPermissionActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/app_logo_text"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/requesting_permissions_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/access_files_explanation_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/grant_access_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/grant_access_text" />

</LinearLayout>